// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-9 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-9:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-9[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-9:focus {
  outline: unset;
  z-index: 2;
}

.emotion-9::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-TextareaField"
>
  <div
    class="emotion-0 emotion-1 emotion-5 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-5 emotion-8 bb-TextareaWrapper bb-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-9 emotion-1 emotion-5 bb-Box bb-Textarea"
        id="id-test"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`overrides TextareaField.base should render correctly 1`] = `
.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-9 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-9:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-9[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-9:focus {
  outline: unset;
  z-index: 2;
}

.emotion-9::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-TextareaField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-TextareaWrapper bb-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Textarea"
        id="id-test"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props should assign a ref via textareaRef 1`] = `
.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-0:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<textarea
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Textarea"
  id="id-test"
  type="text"
/>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-9 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-9:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-9[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-9:focus {
  outline: unset;
  z-index: 2;
}

.emotion-9::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-TextareaField"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-TextareaWrapper bb-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Textarea"
        id="id-test"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props should render correctly when disabled 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-9 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-9:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-9[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-9:focus {
  outline: unset;
  z-index: 2;
}

.emotion-9::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-TextareaField"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-TextareaWrapper bb-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Textarea"
        disabled=""
        id="id-test"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  background-color: var(--bb-palette-primary, #000000)!important;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-9 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-9:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-9[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-9:focus {
  outline: unset;
  z-index: 2;
}

.emotion-9::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-TextareaField"
>
  <div
    class="emotion-0 emotion-1 emotion-5 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-5 emotion-8 bb-TextareaWrapper bb-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-9 emotion-1 emotion-5 bb-Box bb-Textarea"
        id="id-test"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props sizes should render large correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
  font-size: 1.5rem;
}

.emotion-9 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-9:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-9[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-9:focus {
  outline: unset;
  z-index: 2;
}

.emotion-9::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-TextareaField"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-TextareaWrapper bb-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Textarea"
        id="id-test"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props sizes should render medium correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
  font-size: 1.25rem;
}

.emotion-9 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-9:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-9[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-9:focus {
  outline: unset;
  z-index: 2;
}

.emotion-9::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-TextareaField"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-TextareaWrapper bb-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Textarea"
        id="id-test"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props sizes should render small correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
  font-size: 0.875rem;
}

.emotion-9 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-9:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-9[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-9:focus {
  outline: unset;
  z-index: 2;
}

.emotion-9::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-TextareaField"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-TextareaWrapper bb-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Textarea"
        id="id-test"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props states should render danger correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-9 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-9:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-9 {
  border-color: var(--bb-palette-danger, #000000);
  box-shadow: var(--bb-palette-dangerTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-9[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-9:focus {
  outline: unset;
  z-index: 2;
}

.emotion-9::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9 {
  border-color: var(--bb-palette-danger, #000000);
  box-shadow: var(--bb-palette-dangerTint, #000000) 0px 0px 0px 3px!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-TextareaField"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-TextareaWrapper bb-Box"
    >
      <textarea
        aria-invalid="true"
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Textarea"
        id="id-test"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props states should render primary correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-9 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-9:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-9 {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-9[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-9:focus {
  outline: unset;
  z-index: 2;
}

.emotion-9::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9 {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-TextareaField"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-TextareaWrapper bb-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Textarea"
        id="id-test"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props states should render success correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-9 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-9:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-9 {
  border-color: var(--bb-palette-success, #000000);
  box-shadow: var(--bb-palette-successTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-9[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-9:focus {
  outline: unset;
  z-index: 2;
}

.emotion-9::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9 {
  border-color: var(--bb-palette-success, #000000);
  box-shadow: var(--bb-palette-successTint, #000000) 0px 0px 0px 3px!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-TextareaField"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-TextareaWrapper bb-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Textarea"
        id="id-test"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props states should render warning correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-9 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-9:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-9 {
  border-color: var(--bb-palette-warning, #000000);
  box-shadow: var(--bb-palette-warningTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-9[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-9:focus {
  outline: unset;
  z-index: 2;
}

.emotion-9::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9 {
  border-color: var(--bb-palette-warning, #000000);
  box-shadow: var(--bb-palette-warningTint, #000000) 0px 0px 0px 3px!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-TextareaField"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-TextareaWrapper bb-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Textarea"
        id="id-test"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`theming TextareaField.base should render correctly 1`] = `
.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-9 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-9:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-9[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-9:focus {
  outline: unset;
  z-index: 2;
}

.emotion-9::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-9::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-TextareaField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-TextareaWrapper bb-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Textarea"
        id="id-test"
        type="text"
      />
    </div>
  </div>
</div>
`;
